// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Inline english inline span in persian service article 1`] = `
.emotion-0 {
  padding-bottom: 1.5rem;
  margin: 0;
}

<div>
  <span
    class="emotion-0 emotion-1"
    lang="en"
  >
    This is text in a Inline.
  </span>
</div>
`;

exports[`Inline persian inline span in english service article 1`] = `
.emotion-0 {
  padding-bottom: 1.5rem;
  margin: 0;
}

<div>
  <span
    class="emotion-0 emotion-1"
    lang="fa"
  >
    بعض محتوى النص
  </span>
</div>
`;
